# turbo-historical2

./: .gitmodules  Cargo.toml  build.rs  migrations.toml  package.json
.github/workflows/: ci.yml
src/: server.rs
src-frontend/tests/: turbocharger.test.js
src/backend/: jackett_types.rs  mod.rs
src/server_mods/: jackett.rs  mod.rs
