[package]
authors = ["trevyn <trevyn-git@protonmail.com>"]
description = "Template for a fully-configured Turbocharger project with Svelte, Tailwind, and Turbosql."
edition = "2018"
name = "turbo"
publish = false
version = "0.1.0"

[workspace]
exclude = ["rqbit"]
members = [
  "rqbit/crates/*",
]

[lib]
crate-type = ["cdylib", "rlib"]
name = "turbocharger_generated"
path = "src/wasm.rs"

[[bin]]
name = "turbo"
path = "src/server.rs"

[dependencies]
# dependencies for both server and wasm
four-cc = "0.1"
nom = "7"
turbocharger = "0.1"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"

[target.'cfg(target_arch = "wasm32")'.dependencies]
# dependencies for wasm only

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
# dependencies for server only
clap = "=3.0.0-beta.4"
librclone = "0.1"
log = "0.4"
opener = "0.5"
pretty_env_logger = "0.4"
rust-embed = "6"
tokio = {version = "1", features = ["full"]}
turbosql = "0.3"
warp = {version = "0.3", features = ["tls"]}

[patch.crates-io]
turbosql = {git = "https://github.com/trevyn/turbosql", branch = "main"}
warp = {git = "https://github.com/seanmonstar/warp", branch = "master"}
