[package]
authors = ["trevyn <trevyn-git@protonmail.com>"]
edition = "2018"
name = "turbo"
publish = false
resolver = "2"
version = "0.1.0"

[workspace]
exclude = ["rqbit"]
members = ["rqbit/crates/*"]

[lib]
crate-type = ["cdylib", "rlib"]
name = "turbocharger_generated"
path = "src/wasm.rs"

[[bin]]
name = "turbo"
path = "src/server.rs"

[dependencies]
# dependencies for both server and wasm
four-cc = "0.1"
nom = "7"
serde = {version = "1.0", features = ["derive"]}
turbocharger = "0.1"
turbosql = "0.3"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"

[target.'cfg(target_arch = "wasm32")'.dependencies]
# dependencies for wasm only

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
# dependencies for server only
clap = "=3.0.0-beta.5"
librclone = "0.1"
librqbit = {path = "rqbit/crates/librqbit"}
log = "0.4"
opener = "0.5"
pretty_env_logger = "0.4"
reqwest = {version = "0.11", features = ["json", "cookies"]}
rust-embed = "6"
size_format = "1"
tempfile = "3"
tokio = {version = "1", features = ["full"]}
warp = {version = "0.3", features = ["tls"]}

[patch.crates-io]
bindgen = {git = "https://github.com/rust-lang/rust-bindgen", rev = "82462a37a149108db8c428f6caa5d8853ba25c40"}
turbosql = {git = "https://github.com/trevyn/turbosql", branch = "main"}
warp = {git = "https://github.com/seanmonstar/warp", branch = "master"}
